[gd_scene load_steps=8 format=3 uid="uid://cb532vhut7ovl"]

[ext_resource type="Script" path="res://Scripts/Game/UI/CharacterTurnButton.gd" id="1_e3ufb"]
[ext_resource type="PackedScene" uid="uid://jg1gac10pqvt" path="res://Prefabs/Frame.tscn" id="1_k2fqg"]
[ext_resource type="Texture2D" uid="uid://c2a62auhmc77c" path="res://Art/Characters/Barbarian.png" id="2_oq2kq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ith3q"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k8nd4"]
bg_color = Color(0.207843, 0.796078, 0.784314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nflo0"]
bg_color = Color(0, 0.718163, 0.366121, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0mkci"]
bg_color = Color(1, 0.326739, 0.391534, 1)

[node name="Button" type="Button"]
custom_minimum_size = Vector2(300, 120)
script = ExtResource("1_e3ufb")

[node name="Frame" parent="." instance=ExtResource("1_k2fqg")]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 3.0
offset_top = -55.5
offset_right = 116.0
offset_bottom = 55.5
grow_vertical = 2

[node name="Face" type="TextureRect" parent="Frame"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -56.0
offset_right = 56.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(56, 56)
mouse_filter = 2
texture = ExtResource("2_oq2kq")

[node name="Name" type="Label" parent="."]
layout_mode = 0
offset_left = 116.0
offset_top = 15.0
offset_right = 285.0
offset_bottom = 38.0
text = "Warrior Brynjolf"
horizontal_alignment = 1

[node name="HP" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(150, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.0
offset_top = 1.0
offset_right = 97.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxFlat_ith3q")
theme_override_styles/fill = SubResource("StyleBoxFlat_k8nd4")
show_percentage = false
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="HP"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "10/12"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ActivePanel" type="Panel" parent="."]
show_behind_parent = true
custom_minimum_size = Vector2(310, 130)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nflo0")

[node name="HitPanel" type="Panel" parent="."]
visible = false
show_behind_parent = true
custom_minimum_size = Vector2(310, 130)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0mkci")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
